# vulkanwork

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ASSETS.md  BUILDING.md  CMakeLists.txt  LEARNINGS.md  Makefile  README.md  build.ps1  format-staged.ps1  pak.cmd  setup.ps1  setup.sh  startvs.ps1  vcpkg.json
.githooks/: pre-commit
.github/workflows/: build.yml
Scenes/: Default Empty.scene  Default_Scene.scene  With_Dragon.scene
models/: DamagedHelmet.glb  DamagedHelmet.gltf
models/2CylinderEngine/: 2CylinderEngine.dae
models/AlphaBlendModeTest/: AlphaBlendModeTest.blend  AlphaBlendModeTest.gltf
models/AnimatedMorphCube/: AnimatedMorphCube.dae
models/AttenuationTest/: AttenuationTest.blend
models/AttenuationTest/gltf/: AttenuationTest.gltf
models/Avocado/: Avocado.fbx
models/BoomBox/: BoomBox.fbx  T_BoomBox_a.tga  T_BoomBox_ao.tga  T_BoomBox_e.tga  T_BoomBox_mr.tga  T_BoomBox_n.tga
models/BoomBox/gltF/: BoomBox.glb
models/Box/: Box.dae
models/BoxAnimated/: BoxAnimated.dae
models/BoxSemantics/: BoxSemantics.dae
models/BoxTextured/: BoxTextured.dae
models/BoxWithoutIndices/: BoxWithoutIndices.dae
models/BrainStem/: BrainStem.dae
models/Buggy/: Buggy.dae  Buggy.glb
models/CesiumMan/: CesiumMan.dae
models/CesiumMilkTruck/: CesiumMilkTruck.dae
models/ClearCoatTest/: ClearCoatTest.blend  PlasticWrapBaker.blend  SmallRibBaker.blend
models/ClearCoatTest/glb/: ClearCoatTest.gltf
models/Corset/: Corset.fbx  Corset_A.tif  Corset_M.tif  Corset_N.tif  Corset_O.tif
models/DamagedHelmet/: DamagedHelmet.blend
models/DragonAttenuation/: Dragon_Attenuation.blend
models/DragonAttenuation/glb/: Dragon_Attenuation.gltf
models/Duck/: Duck.dae
models/Duck/glb/: Duck.glb
models/EmissiveStrengthTest/: EmissiveStrengthTest.blend
models/EmissiveStrengthTest/glb/: EmissiveStrengthTest.gltf
models/GearboxAssy/: GearboxAssy.dae
models/GearboxAssy/glb/: GearboxAssy.glb
models/Lantern/: SM_LanternPole.fbx
models/Monster/: Monster.dae
models/MorphStressTest/: MorphStressTest.blend
models/MultiUVTest/: MultiUVTest.blend
models/NegativeScaleTest/: NegativeScaleTest.blend
models/NormalTangentMirrorTest/: NormalTangentMirrorTest.blend
models/NormalTangentTest/: NormalTangentTest.blend
models/OrientationTest/: OrientationTest.blend
models/ReciprocatingSaw/: ReciprocatingSaw.dae
models/RiggedFigure/: RiggedFigure.dae
models/RiggedSimple/: RiggedSimple.dae
models/SmilingFace/: SmilingFace.dae
models/SpecularTest/: SpecularTest.blend
models/TextureCoordinateTest/: TextureCoordinateTest.blend
models/TextureSettingsTest/: TextureSettingsTest.blend
models/TextureTransformMultiTest/: TextureTransformMultiTest.blend
models/TransmissionRoughnessTest/: TransmissionRoughnessTest.blend
models/TransmissionSuzanne/: TransmissionSuzanne.blend
models/VC/: VC.dae  alien.tga  prop128.tga
models/VertexColorTest/: VertexColorTest.blend
models/WalkingLady/: WalkingLady.dae
models/WaterBottle/: WaterBottle.fbx
shaders/: debug_heatmap.frag  debug_heatmap.vert  debug_lines.vert  light_cull.comp  pbr.frag  pbr.vert  shadow.vert
src/: app.cpp  app.h  camera.cpp  camera.h  config.h.in  cube.cpp  debugLines.cpp  debugLines.h  debugWindow.cpp  debugWindow.h  gizmo.cpp  gltfLoader.cpp  gltfLoader.h  logger.h  main.cpp  material.h  mesh.h  packfile.cpp  packfile.h  pak_format.h  renderer.cpp  renderer.h  scene.h  sceneFile.cpp  sceneFile.h  sceneGraph.cpp  sceneGraph.h  selection.cpp  selection.h  texture.cpp
src/editor/: debugWindow.cpp  gizmo.cpp  gizmo.h  sceneFile.cpp  sceneGraph.cpp  sceneGraph.h  selection.h
src/graphics/: cube.cpp  cube.h  debugLines.cpp  light.cpp  light.h  material.h  mesh.h  renderer.cpp  renderer.h  scene.h  texture.h
src/loaders/: gltfLoader.cpp  gltfLoader.h
src/pak/: packfile.cpp
textures/grids/: BlueGrid.xcf
tools/packer/: main.cpp
